# SingletonExperiment

./: .gitignore  CMakeLists.txt  Component1.cpp  Component1.h  Component2.cpp  Component2.h  README.md  SingletonComponent.cpp  SingletonComponent.h  main.cpp
